--- a/shopkeeper/shopkeeper_eg.html
+++ b/shopkeeper/shopkeeper_eg.html
@@ -20,6 +20,6 @@
 </div>
 <!--<img id="end_line" src="images/The%20End.png">-->
 <!--<div id="viod"></div>-->
-<script src="js/shopkeeper.js" type="text/javascript"></script>
+<!--<script src="js/shopkeeper.js" type="text/javascript"></script>-->
 </body>
 </html>
