--- a/shopkeeper/shopkeeper.html
+++ b/shopkeeper/shopkeeper.html
@@ -12,11 +12,11 @@
 <div id="shopkeeper">
     <img id="shopkeeper_img" src="#" />
 </div>
-<p id="shopkeeper_name">掌柜:<span></span></p>
+<p id="shopkeeper_name">掌柜: <span></span></p>
 <div id="intro">
-    <img id="mark1" src="#">
+    <img id="mark1" src="images/douhao1.jpg">
     <p id="intro_text"></p>
-    <img id="mark2" src="#">
+    <img id="mark2" src="images/douhao2.jpg">
 </div>
 <!--<img id="end_line" src="#">-->
 <script src="js/shopkeeper.js" type="text/javascript"></script>
