--- a/bnbdetail/shareBnbDetail.html
+++ b/bnbdetail/shareBnbDetail.html
@@ -28,7 +28,7 @@
     <a class="shopkeeper_detail" href="#"><img class="shopkeeper_img" src="#"></a>
     <div id="intro">
         <div id="distance">
-            <img id="distance_icon" src="../h5_2.0/images/icon-add.png">
+            <img id="distance_icon" src="images/icon-add.png">
             <p id="distance_unit"></p>
         </div>
         <h1></h1>
@@ -81,25 +81,25 @@
             <div class="gap"></div>
             <!--猜你喜欢-->
             <p id="title_guess">- 猜你喜欢 -</p>
-            <!--<a href="#">-->
-                <!--<div class="prom_list">-->
-                    <!--<img src="#" class="prom_img">-->
-                    <!--<p class="prom_title"></p>-->
-                    <!--<p class="prom_price"><span> 起/<span class="prom_unit"></span>晚</span></p>-->
-                <!--</div>-->
-            <!--</a>-->
-            <!--<div class="gap_2"></div>-->
-            <!--<img id="end_line" src="../h5_2.0/images/TheEnd.png">-->
+            <a href="#">
+                <div class="prom_list">
+                    <img src="#" class="prom_img">
+                    <p class="prom_title"></p>
+                    <p class="prom_price"><span> 起/<span class="prom_unit"></span>晚</span></p>
+                </div>
+            </a>
+            <div class="gap_2"></div>
+            <img id="end_line" src="../h5_2.0/images/TheEnd.png">
         </div>
         <!--房型-->
         <div id="content_2" class="unselect">
             <!--<div class="type">-->
-                <!--<img class="type_img" src="">-->
-                <!--<div>-->
-                    <!--<p class="type_name"></p>-->
-                    <!--<p class="type_price">参考价:&nbsp;<span class="type_number"></span><span>&nbsp;起/<span class="type_unit"></span>晚</span></p>-->
-                <!--</div>-->
-                <!--<p class="type_intro"></p>-->
+            <!--<img class="type_img" src="">-->
+            <!--<div>-->
+            <!--<p class="type_name"></p>-->
+            <!--<p class="type_price">参考价:&nbsp;<span class="type_number"></span><span>&nbsp;起/<span class="type_unit"></span>晚</span></p>-->
+            <!--</div>-->
+            <!--<p class="type_intro"></p>-->
             <!--</div>-->
             <!--<div class="gap_3"></div>-->
         </div>
@@ -108,21 +108,20 @@
 <!--导购条-->
 <footer>
     <p class="price"><span> 起/<span class="prom_unit"></span> 晚</span></p>
-    <button>订 购</button>
+    <button>打开app</button>
 </footer>
 <!--弹窗-->
-<div id="tanchuang_box">
-    <div id="tanchuang_background" class="disappear"></div>
-    <div id="tanchuang" class="disappear">
-        <img id="tanchuang_img" src="../h5_2.0/images/phoneBooking.png">
-        <p>抱歉,<span>本酒店</span>暂不支持在线预订。</p>
-        <p>请直接电话联系酒店预订</p>
-        <a id="phone"><button id="tanchuang_booking">电话预订</button>
-        </a>
-    </div>
-</div>
+<!--<div id="tanchuang_box">-->
+    <!--<div id="tanchuang_background" class="disappear"></div>-->
+    <!--<div id="tanchuang" class="disappear">-->
+        <!--<img id="tanchuang_img" src="../h5_2.0/images/phoneBooking.png">-->
+        <!--<p>抱歉,<span>本酒店</span>暂不支持在线预订。</p>-->
+        <!--<p>请直接电话联系酒店预订</p>-->
+        <!--<button id="tanchuang_booking">电话预订</button>-->
+    <!--</div>-->
+<!--</div>-->
 
-<script type="text/javascript" src="../h5_2.0/js/iosBnbDetail.js"></script>
+<script type="text/javascript" src="../h5_2.0/js/shareBnbDetail.js"></script>
 </body>
 </html>
 
