--- a/bnbdetail/bnbDetail.html
+++ b/bnbdetail/bnbDetail.html
@@ -121,7 +121,7 @@
         </a>
     </div>
 </div>
-
+<script type="text/javascript" src="../h5_2.0/js/androidBnbDetail.js"></script>
 <script type="text/javascript" src="../h5_2.0/js/iosBnbDetail.js"></script>
 </body>
 </html>
