--- a/bnbdetail/bnbShare.html
+++ b/bnbdetail/bnbShare.html
@@ -81,15 +81,15 @@
             <div class="gap"></div>
             <!--猜你喜欢-->
             <p id="title_guess">- 猜你喜欢 -</p>
-            <a href="#">
-                <div class="prom_list">
-                    <img src="#" class="prom_img">
-                    <p class="prom_title"></p>
-                    <p class="prom_price"><span> 起/<span class="prom_unit"></span>晚</span></p>
-                </div>
-            </a>
-            <div class="gap_2"></div>
-            <img id="end_line" src="../h5_2.0/images/TheEnd.png">
+            <!--<a href="#">-->
+                <!--<div class="prom_list">-->
+                    <!--<img src="#" class="prom_img">-->
+                    <!--<p class="prom_title"></p>-->
+                    <!--<p class="prom_price"><span> 起/<span class="prom_unit"></span>晚</span></p>-->
+                <!--</div>-->
+            <!--</a>-->
+            <!--<div class="gap_2"></div>-->
+            <!--<img id="end_line" src="../h5_2.0/images/TheEnd.png">-->
         </div>
         <!--房型-->
         <div id="content_2" class="unselect">
