--- a/bnbpromotion/bnbPromotionShare.html
+++ b/bnbpromotion/bnbPromotionShare.html
@@ -7,28 +7,20 @@
 <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
 <title></title>
 
-<link rel="stylesheet" type="text/css" href="../h5_2.0/scrollbar.css">
+<link rel="stylesheet" type="text/css" href="../h5_2.0/css/scrollbar.css">
 <link rel="stylesheet" type="text/css" href="../h5_2.0/css/reset.css"/>
 <link rel="stylesheet" type="text/css" href="../h5_2.0/css/comment.css"/>
 <link rel="stylesheet" type="text/css" href="../h5_2.0/css/pro.css"/>
-<link rel="stylesheet" type="text/css" href="../h5_2.0/css/hotel.css"/>
+<link rel="stylesheet" type="text/css" href="../h5_2.0/css/bnbPromotion.css"/>
 <link rel="shortcut icon" href="http://a.tbcdn.cn/s/kissy/favicon.ico" type="image/x-icon">
 <script src="../h5_2.0/js/jquery-1.4.2.js"></script>
+<script src="../h5_2.0/js/rem.js"></script>
 <script src="../h5_2.0/js/js.js"></script>
-<script src="../h5_2.0/js/hostAll.js" type="text/javascript" charset="utf-8"></script>
 <script src="../h5_2.0/js/ask.js" type="text/javascript" charset="utf-8"></script>
-<script src="../h5_2.0/js/activeShare.js" type="text/javascript" charset="utf-8"></script>
+<script src="../h5_2.0/js/hostAll.js" type="text/javascript" charset="utf-8"></script>
 <script src="../h5_2.0/js/touchslide.1.1.js" type="text/javascript" charset="utf-8"></script>
-<script type="application/javascript" src="../h5_2.0/iscroll.js"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $(".proFooter .footerRight").click(function(event) {
-               window.location="/h5_2.0/tiao.html?id="+id+"&act=toRecommend"
-            });
-
-  });
-</script>
-
+<script type="application/javascript" src="../h5_2.0/js/iscroll.js"></script>
+<script src="../h5_2.0/js/shareBnbPromotion.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -59,8 +51,8 @@
     </div>
 
     <span class="icon"></span>
-    <span class="time">8</span>
-    <span class="dist">某某某某某某市中心1000公里</span>
+    <span class="time"></span>
+    <span class="dist"></span>
   </header>
   <dl class="titleWrap">
     <dt class="title"></dt>
@@ -68,14 +60,20 @@
       <i></i><span>收藏</span>
     </dd>
   </dl>
+          <!--新增 标签-->
+          <div id="tips">
+            <ul>
+            </ul>
+          </div>
+
   <div class="grade"></div>
   <div class="highLights">
     <h2>优惠亮点</h2>
     <div class="highLightsContent">素有“江南福地”美誉的常熟拥有深厚的历史文化积淀，生态优良、景致旖旎的尚湖与峰峦回环、林木葱郁的虞山交相辉映，共同绘出了一幅秀美的山水风景图，城内更有亭台楼阁与古典园林等历史遗迹彰显人文风采。<br><br>本优惠仅需 ￥788，即可升级入住 1 晚豪华房，每日前 2 名预订免费升级至豪华套房，享受双人早餐、双人自助晚餐、高尔夫球体验等礼遇，另有 ￥1,399 的 2 晚套餐可选，额外包含 2 张景区门票。入住有效至11月10日，周末全部通用不加价！</div>
     <div class="btn" id="btn1"><span>展开全部</span><i class="iconfont">&#xe619;</i></div>
   </div>
-  <div class="ota">
-    <div class="otaPrice" >酒店参考价：<span>3000 起 / 晚</span><i class="iconfont">&#xe640;</i></div>
+  <div class="ota" style="display: none">
+    <div class="otaPrice" >酒店参考价：<span></span> 起 / 晚<i class="iconfont">&#xe640;</i></div>
   </div>
   <div class="promotionEquity">
     <h2>优惠内容</h2>
@@ -115,18 +113,78 @@
             <li class="want"><i></i>想去 [ <b>5</b> ]</li>
             <li class="togo"><i></i>去过 [ <b>5</b> ]</li>
           </ul>
-          <div class="detail"></div>
+          <!--<div class="detail"></div>-->
 
-        </div>
-        <div class="map">
-          <div class="mapPic" id="mapPic"><img /></div>
-        </div>
-        <p class="address"></p>
-        <p class="phone"></p>
-        <div class="proFooterTop"></div>
-        <div class="Promotion">
-        </div>
-        <div class="proFooterEnd"></div>
+        <!--</div>-->
+        <!--<div class="map">-->
+          <!--<div class="mapPic" id="mapPic"><img /></div>-->
+        <!--</div>-->
+        <!--<p class="address"></p>-->
+        <!--<p class="phone"></p>-->
+        <!--<div class="proFooterTop"></div>-->
+        <!--<div class="Promotion">-->
+        <!--</div>-->
+        <!--<div class="proFooterEnd"></div>-->
+          <!--内容主体 包含印象、房型-->
+          <article>
+            <div id="nav">
+              <div id="yinxiang" class="select">印象</div>
+              <div id="fangxing">房型</div>
+            </div>
+            <div id="content">
+              <!--印象-->
+              <div id="content_1">
+                <!--图文介绍-->
+                <div id="h5body">
+
+                </div>
+                <!--地图信息、联系方式-->
+                <div id="info">
+                  <img id="map" src="#">
+                  <ul id="address">
+                    <li><img src="../h5_2.0/images/icon-add.png">&nbsp; &nbsp; </li>
+                    <li><img src="../h5_2.0/images/icon-tel.png">&nbsp; &nbsp; </li>
+                  </ul>
+                </div>
+                <div class="gap"></div>
+                <!--掌柜详情-->
+                <div id="shopkeeper_detail">
+                  <a class="shopkeeper_detail" href="#"><img class="shopkeeper_img" src="#"></a>
+                </div>
+                <p id="shopkeeper_name">掌柜: <span></span></p>
+                <p id="shopkeeper_intro" class="hidden"></p>
+                <div id="more">
+                  <p>查看全部</p>
+                  <img src="../h5_2.0/images/down.png">
+                </div>
+                <div class="gap"></div>
+                <!--猜你喜欢-->
+                <p id="title_guess">- 猜你喜欢 -</p>
+                <!--<a href="#">-->
+                <!--<div class="prom_list">-->
+                <!--<img src="#" class="prom_img">-->
+                <!--<p class="prom_title"></p>-->
+                <!--<p class="prom_price"><span> 起/<span class="prom_unit"></span>晚</span></p>-->
+                <!--</div>-->
+                <!--</a>-->
+                <!--<div class="gap_2"></div>-->
+                <!--<img id="end_line" src="../h5_2.0/images/TheEnd.png">-->
+              </div>
+
+              <!--房型-->
+              <div id="content_2" class="unselect">
+                <!--<div class="type">-->
+                <!--<img class="type_img" src="">-->
+                <!--<div>-->
+                <!--<p class="type_name"></p>-->
+                <!--<p class="type_price">参考价:&nbsp;<span class="type_number"></span><span>&nbsp;起/<span class="type_unit"></span>晚</span></p>-->
+                <!--</div>-->
+                <!--<p class="type_intro"></p>-->
+                <!--</div>-->
+                <!--<div class="gap_3"></div>-->
+              </div>
+            </div>
+          </article>
       </div>
     </div>
 
@@ -136,13 +194,23 @@
         <span class="pullUpLabel"></span>
       </div>
     </div>
-    
+    </div>
   </div>
 </div>
+<div class="proMask">
+  <div class="proCon">
+    <div class="proMaskTitle">如何获得？</div>
+    <p class="proMaskCon">香港套票仅适用于拥有淘宝账户的IHG优悦会会员购买并使用。请确保在洲际酒店集团天猫官方店购买过程中在备注栏填写准确的9位IHG优悦会会员号码。</p>
+    <div class="proMaskBtn"></div>
+    <div class="proMaskBtn1"><a href=""></a></div>
+  </div>
+  <div class="proMaskCloseBtn"></div>
+</div>
 <div id="footer" class="proFooter">
-  <div class="footerLeft">8</div>
-    <div class="footerCenter" ><span class="yuanJia">2888 起/3晚</span><span class="plusJia"></span><span class="proJia"><i>3888</i>起/<em>3晚</em></span></div>
+  <div class="footerLeft" onclick="comment()"></div>
+    <div class="footerCenter" ><span class="yuanJia"></span><span class="plusJia"></span><span class="proJia"><i></i>起/<em></em></span></div>
     <div class="footerRight" >如何预订?</div>
+    <div class="footerRight2" >如何预订?</div>
 </div>
 <script type="text/javascript">
 
